--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,28 +23,31 @@
         <img src="./api/male/seed.svg" alt="male" width="128" height="128" />
       </a>
       <a href="./api/female/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/female/seed.svg" alt="male" width="128" height="128" />
+        <img src="./api/female/seed.svg" alt="female" width="128" height="128" />
       </a>
       <a href="./api/human/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/human/seed.svg" alt="male" width="128" height="128" />
-      </a>
-      <a href="./api/identicon/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/identicon/seed.svg" alt="male" width="128" height="128" />
-      </a>
-      <a href="./api/initials/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/initials/seed.svg" alt="male" width="128" height="128" />
-      </a>
-      <a href="./api/bottts/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/bottts/seed.svg" alt="male" width="128" height="128" />
+        <img src="./api/human/seed.svg" alt="human" width="128" height="128" />
       </a>
       <a href="./api/avataaars/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/avataaars/seed.svg" alt="male" width="128" height="128" />
+        <img src="./api/avataaars/seed.svg" alt="avataaars" width="128" height="128" />
+      </a>
+      <a href="./api/bottts/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/bottts/seed.svg" alt="bottts" width="128" height="128" />
+      </a>
+      <a href="./api/micah/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/micah/seed.svg" alt="micah" width="128" height="128" />
+      </a>
+      <a href="./api/initials/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/initials/seed.svg" alt="initials" width="128" height="128" />
+      </a>
+      <a href="./api/identicon/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/identicon/seed.svg" alt="identicon" width="128" height="128" />
       </a>
       <a href="./api/jdenticon/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/jdenticon/seed.svg" alt="male" width="128" height="128" />
+        <img src="./api/jdenticon/seed.svg" alt="jdenticon" width="128" height="128" />
       </a>
       <a href="./api/gridy/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/gridy/seed.svg" alt="male" width="128" height="128" />
+        <img src="./api/gridy/seed.svg" alt="gridy" width="128" height="128" />
       </a>
 
       <div class="pt-5 mt-4">
