Add: Verion 4.8 Support

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,14 +19,20 @@
       <h1 class="display-1">Avatars API</h1>
       <p class="lead pb-5 mb-4">Congratulations! Your own Avatars API has been set up and is waiting for requests.</p>
 
-      <a href="./api/male/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/male/seed.svg" alt="male" width="128" height="128" />
+      <a href="./api/pixel-art/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/pixel-art/seed.svg" alt="pixel-art" width="128" height="128" />
       </a>
-      <a href="./api/female/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/female/seed.svg" alt="female" width="128" height="128" />
+      <a href="./api/pixel-art-neutral/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/pixel-art-neutral/seed.svg" alt="pixel-art-neutral" width="128" height="128" />
       </a>
-      <a href="./api/human/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/human/seed.svg" alt="human" width="128" height="128" />
+      <a href="./api/croodles/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/croodles/seed.svg" alt="croodles" width="128" height="128" />
+      </a>
+      <a href="./api/croodles-neutral/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/croodles-neutral/seed.svg" alt="croodles-neutral" width="128" height="128" />
+      </a>
+      <a href="./api/open-peeps/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/open-peeps/seed.svg" alt="open-peeps" width="128" height="128" />
       </a>
       <a href="./api/avataaars/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/avataaars/seed.svg" alt="avataaars" width="128" height="128" />
@@ -48,6 +54,15 @@
       </a>
       <a href="./api/gridy/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/gridy/seed.svg" alt="gridy" width="128" height="128" />
+      </a>
+      <a href="./api/male/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/male/seed.svg" alt="male" width="128" height="128" />
+      </a>
+      <a href="./api/female/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/female/seed.svg" alt="female" width="128" height="128" />
+      </a>
+      <a href="./api/human/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/human/seed.svg" alt="human" width="128" height="128" />
       </a>
 
       <div class="pt-5 mt-4">
