--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,50 +19,66 @@
       <h1 class="display-1">Avatars API</h1>
       <p class="lead pb-5 mb-4">Congratulations! Your own Avatars API has been set up and is waiting for requests.</p>
 
-      <a href="./api/pixel-art/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/pixel-art/seed.svg" alt="pixel-art" width="128" height="128" />
-      </a>
-      <a href="./api/pixel-art-neutral/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/pixel-art-neutral/seed.svg" alt="pixel-art-neutral" width="128" height="128" />
-      </a>
-      <a href="./api/croodles/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/croodles/seed.svg" alt="croodles" width="128" height="128" />
-      </a>
-      <a href="./api/croodles-neutral/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/croodles-neutral/seed.svg" alt="croodles-neutral" width="128" height="128" />
-      </a>
-      <a href="./api/open-peeps/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/open-peeps/seed.svg" alt="open-peeps" width="128" height="128" />
-      </a>
-      <a href="./api/avataaars/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+
+      <a href="./api/avataaars" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/avataaars/seed.svg" alt="avataaars" width="128" height="128" />
       </a>
-      <a href="./api/bottts/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+      <a href="./api/big-ears" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/big-ears/seed.svg" alt="big-ears" width="128" height="128" />
+      </a>
+      <a href="./api/big-ears-neutral" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/big-ears-neutral/seed.svg" alt="big-ears-neutral" width="128" height="128" />
+      </a>
+      <a href="./api/big-smile" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/big-smile/seed.svg" alt="big-smile" width="128" height="128" />
+      </a>
+      <a href="./api/bottts" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/bottts/seed.svg" alt="bottts" width="128" height="128" />
       </a>
-      <a href="./api/micah/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/micah/seed.svg" alt="micah" width="128" height="128" />
+      <a href="./api/croodles" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/croodles/seed.svg" alt="croodles" width="128" height="128" />
       </a>
-      <a href="./api/initials/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/initials/seed.svg" alt="initials" width="128" height="128" />
+      <a href="./api/croodles-neutral" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/croodles-neutral/seed.svg" alt="croodles-neutral" width="128" height="128" />
       </a>
-      <a href="./api/identicon/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/identicon/seed.svg" alt="identicon" width="128" height="128" />
-      </a>
-      <a href="./api/jdenticon/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/jdenticon/seed.svg" alt="jdenticon" width="128" height="128" />
-      </a>
-      <a href="./api/gridy/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/gridy/seed.svg" alt="gridy" width="128" height="128" />
-      </a>
-      <a href="./api/male/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
-        <img src="./api/male/seed.svg" alt="male" width="128" height="128" />
-      </a>
-      <a href="./api/female/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+      <a href="./api/female" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/female/seed.svg" alt="female" width="128" height="128" />
       </a>
-      <a href="./api/human/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+      <a href="./api/gridy" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/gridy/seed.svg" alt="gridy" width="128" height="128" />
+      </a>
+      <a href="./api/human" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/human/seed.svg" alt="human" width="128" height="128" />
+      </a>
+      <a href="./api/identicon" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/identicon/seed.svg" alt="identicon" width="128" height="128" />
+      </a>
+      <a href="./api/initials" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/initials/seed.svg" alt="initials" width="128" height="128" />
+      </a>
+      <a href="./api/jdenticon" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/jdenticon/seed.svg" alt="jdenticon" width="128" height="128" />
+      </a>
+      <a href="./api/male" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/male/seed.svg" alt="male" width="128" height="128" />
+      </a>
+      <a href="./api/micah" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/micah/seed.svg" alt="micah" width="128" height="128" />
+      </a>
+      <a href="./api/miniavs" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/miniavs/seed.svg" alt="miniavs" width="128" height="128" />
+      </a>
+      <a href="./api/open-peeps" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/open-peeps/seed.svg" alt="open-peeps" width="128" height="128" />
+      </a>
+      <a href="./api/personas" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/personas/seed.svg" alt="personas" width="128" height="128" />
+      </a>
+      <a href="./api/pixel-art" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/pixel-art/seed.svg" alt="pixel-art" width="128" height="128" />
+      </a>
+      <a href="./api/pixel-art-neutral" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/pixel-art-neutral/seed.svg" alt="pixel-art-neutral" width="128" height="128" />
       </a>
 
       <div class="pt-5 mt-4">
