--- a/src/public/index.html
+++ b/src/public/index.html
@@ -20,6 +20,12 @@
       <p class="lead pb-5 mb-4">Congratulations! Your own Avatars API has been set up and is waiting for requests.</p>
 
 
+      <a href="./api/adventurer/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/adventurer/seed.svg" alt="adventurer" width="128" height="128" />
+      </a>
+      <a href="./api/adventurer-neutral/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
+        <img src="./api/adventurer-neutral/seed.svg" alt="adventurer-neutral" width="128" height="128" />
+      </a>
       <a href="./api/avataaars/seed.svg" target="_blank" class="rounded-3 border border-5 p-2 m-4 d-inline-block">
         <img src="./api/avataaars/seed.svg" alt="avataaars" width="128" height="128" />
       </a>
